--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
     <title>Guess a Number</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <p>Enter a guess between 0 to 50</p>
+      <div>
+        <input id="input-num" placeholder="Enter a number" min="1" max="50" />
+      </div>
+      <button id="submit">Submit</button>
+      <button id="start">Start Game</button>
+      <div id="results"></div>
+      <p>Guesses: <span id="guesses">0</span></p>
+    </div>
+  </body>
   <script src="script.js"></script>
 </html>
